# daeplanner

./: .gitattributes  .gitignore  ROTEIRO_EXPERIMENTAL.md  dev_env.sh  my-readme.md  run_experiment.py  table_headers.md
daep/: count_tree_map_runtime.sh  experiment_run.sh  exploration.sh  export_experiment_report.py  run_tree_stack_realtime.sh  save_octomap.sh  save_tree_runtime_state.sh
daep/catkin_ws/src/aeplanner/aeplanner/src/: aeplanner.cpp
daep/catkin_ws/src/aeplanner/rpl_exploration/config/: simple_forest_exploration.yaml  world_jean_exploration.yaml
daep/catkin_ws/src/aeplanner/rpl_exploration/launch/: exploration.launch  rpl_exploration.launch
daep/catkin_ws/src/aeplanner/rrtplanner/src/: rrt.cpp
daep/catkin_ws/src/drone_gazebo/: daep.rviz
daep/catkin_ws/src/drone_gazebo/launch/: simple_forest_dynamic.launch  world_jean_static.launch
daep/catkin_ws/src/drone_gazebo/models/world_jean_ground/: model.config  model.sdf
daep/catkin_ws/src/drone_gazebo/models/world_jean_tree/: model.config  model.sdf
daep/catkin_ws/src/drone_gazebo/models/world_jean_tree/meshes/: world_jean_assets.mtl
daep/catkin_ws/src/drone_gazebo/worlds/: simple_forest.world  world_jean.world
daep/catkin_ws/src/tree_identifier/: CMakeLists.txt  package.xml
daep/catkin_ws/src/tree_identifier/launch/: tree_cluster_xy_plotter.launch  tree_detector.launch  tree_id_tracker.launch  tree_map_fuser.launch  tree_stack.launch  tree_xy_plotter.launch
daep/catkin_ws/src/tree_identifier/msg/: TreeDetection.msg  TreeDetectionArray.msg
daep/catkin_ws/src/tree_identifier/scripts/: tree_cluster_pkl_plotter.py  tree_cluster_xy_plotter.py  tree_detector_node.py  tree_id_tracker.py  tree_map_csv_plotter.py  tree_map_fuser.py  tree_xy_plotter.py  world_tree_compare_plotter.py  world_tree_ground_truth_plotter.py
images/daep/: Dockerfile
meus-resultados/: dbscan_gmm_ransac.pkl  notes.md  plot_pickle_svg.py
meus-resultados/world-jean/: generate_world_jean.py
